# llm-web-agent

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  config.yaml  pyproject.toml  recordings.json  test_record.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
config/: default.yaml
examples/: basic_navigation.py  demo_mui.py  demo_overlay.py
instructions/: README.md  google_search.txt  mui_demo.txt  notes.txt  test_task.txt  vscode.txt
my-reports/: e9ae5fed_report.html  e9ae5fed_report.json  e9ae5fed_report.md
reports/: 98be817b_report.html  98be817b_report.json  98be817b_report.md  b56e5abd_report.html  b56e5abd_report.json  b56e5abd_report.md
scripts/: test_adaptive_saucedemo.py
src/llm_web_agent/: __init__.py  main.py
src/llm_web_agent/actions/: __init__.py  interaction.py  navigation.py
src/llm_web_agent/browsers/: __init__.py  playwright_browser.py  selenium_browser.py
src/llm_web_agent/config/: __init__.py  loader.py  settings.py
src/llm_web_agent/context/: __init__.py  context_manager.py
src/llm_web_agent/control/: __init__.py
src/llm_web_agent/core/: __init__.py  agent.py  executor.py  planner.py
src/llm_web_agent/engine/: __init__.py  accessibility_resolver.py  action_context.py  adaptive_engine.py  batch_executor.py  browser_overlay.py  dom_map.py  engine.py  error_recovery.py  fingerprint.py  form_handler.py  framework_hints.py  instruction_normalizer.py  instruction_parser.py  llm_fallback.py  pre_analyzer.py  run_context.py  selector_pattern_tracker.py  site_profiler.py  state_manager.py  step_validator.py  strategy_tracker.py  target_resolver.py  task_graph.py  task_planner.py  text_index.py
src/llm_web_agent/exceptions/: __init__.py  action.py  base.py  browser.py  llm.py
src/llm_web_agent/gui/: __init__.py  server.py  state.py
src/llm_web_agent/intelligence/: __init__.py
src/llm_web_agent/interfaces/: __init__.py  action.py  browser.py  extractor.py  llm.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py  test_engine_integration.py  test_workflows.py
tests/unit/: test_actions.py  test_browsers.py  test_config.py  test_control.py  test_exceptions.py  test_gui.py  test_intelligence.py  test_llm_providers.py  test_modes.py  test_registry.py  test_reporting.py
(+75 files in other folders)
