[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-web-agent"
version = "0.1.0"
description = "A universal browser automation agent powered by large language models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Suhaib Bin Younis" }
]
keywords = ["llm", "browser", "automation", "playwright", "ai", "web-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "black>=23.9.0",
    "pre-commit>=3.4.0",
]
selenium = [
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
]
anthropic = [
    "anthropic>=0.7.0",
]
openai = [
    "openai>=1.3.0",
]
gui = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sse-starlette>=1.6.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
]
all = [
    "llm-web-agent[dev,selenium,anthropic,openai,gui]",
]

[project.scripts]
llm-web-agent = "llm_web_agent.main:app"

[project.urls]
Homepage = "https://github.com/suhaibbinyounis/llm-web-agent"
Repository = "https://github.com/suhaibbinyounis/llm-web-agent"
Issues = "https://github.com/suhaibbinyounis/llm-web-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_web_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py310"]
